# contractguard

./: .gitignore  .pre-commit-config.yaml  CAPABILITIES.md  DEPLOYMENT.md  INSTRUCTIONS.md  PITCH_OUTLINE.md  README.md  pyproject.toml
.github/workflows/: contractguard-ci.yml
rules/: config_rules.yaml  csv_rules.yaml  dependency_rules.yaml  dockerfile_rules.yaml  json_rules.yaml  pii_rules.yaml  regex_rules.yaml  secrets_rules.yaml  sql_rules.yaml
samples/config/: dangerous.env  dangerous.yaml
samples/csv/: users.csv
samples/docker/: Dockerfile
samples/json/: products.json  transactions.json
samples/pii/: customer_data.json
samples/regex/: patterns.txt
samples/secrets/: leaked.env
samples/sql/: bad_queries.sql  good_queries.sql
src/contractguard/: __init__.py  cli.py  engine.py  history.py  reporter.py  scorer.py  web.py
src/contractguard/analyzers/: config_analyzer.py  csv_analyzer.py  dependency_analyzer.py  dockerfile_analyzer.py  json_analyzer.py  pii_analyzer.py  regex_analyzer.py  secrets_analyzer.py  sql_analyzer.py
tests/: test_config_analyzer.py  test_csv_analyzer.py  test_dependency_analyzer.py  test_dockerfile_analyzer.py  test_engine.py  test_history.py  test_json_analyzer.py  test_pii_analyzer.py  test_regex_analyzer.py  test_reporter.py  test_scorer.py  test_secrets_analyzer.py  test_sql_analyzer.py
